name:                Pie
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Strrationalism/Pie#readme
license:             AGPL-3
license-file:        LICENSE
author:              Seng-Jik
maintainer:          xuchao199806@qq.com
copyright:           Strrationalism Studio
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
 
executable Pie
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       AST
                     , Parser
                     , Error
                     , Eval
                     , Runtime
                     , Tops
                     , Task
                     , TaskRunner

  build-depends:       base >= 4.7 && < 5
                     , sexpresso
                     , megaparsec
                     , process
                     , text
                     , filepattern
                     , filepath
                     , directory
                     , parallel-io
                     , time

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
